force-app/main/default/objects/Availity_Setting__mdt/Availity_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Availity Settings used by AvailityAuthProvider</description>
    <label>Availity Setting</label>
    <pluralLabel>Availity Settings</pluralLabel>
</CustomObject>