force-app/main/default/objects/Availity_Setting__mdt/fields/Access_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_URL__c</fullName>
    <description>Availity Access Token URL</description>
    <inlineHelpText>Availity Access Token URL</inlineHelpText>
    <label>Access Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>