force-app/main/default/objects/Availity_Setting__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID from Availity application</description>
    <inlineHelpText>Client ID from Availity application</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>