force-app/main/default/objects/Availity_Setting__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>Availity Client Secret</description>
    <inlineHelpText>Availity Client Secret</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>